# Inkblot

./: .gitignore  Cargo.toml  build.ps1
crates/appstate/: Cargo.toml
crates/appstate/src/: lib.rs  websocket.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/database/src/sql/: init_db.sql
crates/db/src/sql/: init.sql
crates/macros/src/: lib.rs
crates/protocol/: README.md  build.rs
crates/protocol/proto/: messages.proto
crates/rustcanvas/: Cargo.toml
crates/rustcanvas/src/: main.rs
crates/utils/: Cargo.toml
crates/utils/src/: input.rs  lib.rs
crates/webserver/: Cargo.toml
crates/webserver/src/htmlsrc/: jquery.min.js
