[workspace]
resolver = "3"
members = ["crates/*"]

default-members = ["crates/rustcanvas"]

[workspace.dependencies]
axum = { version = "0.8.3", features = ["tokio", "ws"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_jsonrc = "0.1.0"
tokio = { version = "1.44.2", features = ["full"] }
# in-project dependencies
appstate = { path = "crates/appstate" }
config = { path = "crates/config" }
database = { path = "crates/database" }
webserver = { path = "crates/webserver" }
rusqlite = { version = "0.34.0", features = ["bundled"] }

[profile.dev]
opt-level = 0
incremental = true
debug = true
overflow-checks = true
panic = "unwind"
codegen-units = 256
lto = "off"
strip = "none"

[profile.release]
opt-level = 3
lto = "fat"
debug = false
overflow-checks = false
panic = "abort"
codegen-units = 1
strip = "symbols"
